punygram.output
Terminals unused in grammar

    INDENT
    DEDENT
    LESS
    GREATER
    LBRACE
    RBRACE
    EQEQUAL
    NOTEQUAL
    LESSEQUAL
    GREATEREQUAL
    PLUSEQUAL
    MINEQUAL
    STAREQUAL
    SLASHEQUAL
    PERCENTEQUAL
    AMPEREQUAL
    VBAREQUAL
    CIRCUMFLEXEQUAL
    LEFTSHIFTEQUAL
    RIGHTSHIFTEQUAL
    DOUBLESTAREQUAL
    DOUBLESLASHEQUAL
    ATEQUAL
    RARROW
    ELLIPSIS
    PYDEF
    RAISE
    DEL
    IMPORT
    ELIF
    TRY
    IS
    WHILE
    AS
    EXCEPT
    WITH
    ASSERT
    FINALLY
    NONLOCAL
    BREAK
    CLASS
    CONTINUE
    GLOBAL
    PASS
    OP
    TYPE_IGNORE
    TYPE_COMMENT
    ERRORTOKEN
    COMMENT
    ENCODING
    EMPTY


State 39 conflicts: 1 reduce/reduce
State 142 conflicts: 1 reduce/reduce
State 203 conflicts: 1 shift/reduce
State 220 conflicts: 1 reduce/reduce
State 225 conflicts: 1 reduce/reduce


Grammar

    0 $accept: file_input $end

    1 file_input: statements.opt endmarker.opt

    2 statements.opt: ε
    3               | statements

    4 endmarker.opt: ε
    5              | ENDMARKER

    6 statements: statement
    7           | statements statement

    8 statement: simple_stmts

    9 simple_stmts: semi_simple_stmts.rep semi.opt nl_OR_endmarker
   10             | NEWLINE

   11 nl_OR_endmarker: NEWLINE
   12                | ENDMARKER

   13 semi.opt: ε
   14         | SEMI

   15 semi_simple_stmts.rep: simple_stmt
   16                      | semi_simple_stmts.rep SEMI simple_stmt

   17 simple_stmt: assignment
   18            | return_stmt
   19            | star_expressions

   20 assignment: NAME COLON expression equal_annotated_rhs.opt
   21           | single_target_OR_ssat COLON expression equal_annotated_rhs.opt

   22 single_target_OR_ssat: LPAR single_target RPAR
   23                      | single_subscript_attribute_target

   24 single_target: single_subscript_attribute_target
   25              | NAME
   26              | LPAR single_target RPAR

   27 single_subscript_attribute_target: t_primary DOT NAME
   28                                  | t_primary LSQB slices RSQB

   29 t_primary: t_primary DOT NAME
   30          | t_primary LSQB slices RSQB
   31          | t_primary genexp
   32          | t_primary LPAR arguments.opt RPAR
   33          | atom

   34 arguments.opt: ε
   35              | arguments

   36 arguments: args comma.opt

   37 args: kwargs

   38 kwargs: comma_kwarg_or_starred.rep COMMA comma_kwarg_or_double_starred.rep

   39 comma_kwarg_or_starred.rep: kwarg_or_starred
   40                           | comma_kwarg_or_starred.rep COMMA kwarg_or_starred

   41 comma_kwarg_or_double_starred.rep: kwarg_or_double_starred
   42                                  | comma_kwarg_or_double_starred.rep COMMA kwarg_or_double_starred

   43 kwarg_or_starred: NAME EQUAL expression
   44                 | starred_expression

   45 kwarg_or_double_starred: NAME EQUAL expression
   46                        | DOUBLESTAR expression

   47 genexp: LPAR ass_expr_OR_expr for_if_clauses RPAR

   48 ass_expr_OR_expr: assignment_expression
   49                 | expression

   50 assignment_expression: NAME COLONEQUAL

   51 slices: slice
   52       | comma_slice_OR_starred_expr.rep comma.opt

   53 comma_slice_OR_starred_expr.rep: slice_OR_starred_expr
   54                                | comma_slice_OR_starred_expr.rep COMMA slice_OR_starred_expr

   55 slice_OR_starred_expr: slice
   56                      | starred_expression

   57 slice: expression.opt COLON expression.opt colon_expression.opt

   58 starred_expression: STAR expression

   59 for_if_clauses: for_if_clause.rep

   60 for_if_clause.rep: for_if_clause
   61                  | for_if_clause.rep for_if_clause

   62 for_if_clause: ASYNC FOR star_targets IN disjunction if_disjunction.rep

   63 star_targets: star_target
   64             | star_target comma_star_target.rep comma.opt

   65 comma_star_target.rep: ε
   66                      | comma_star_target.rep COMMA star_target

   67 star_target: target_with_star_atom

   68 target_with_star_atom: t_primary DOT NAME
   69                      | t_primary LSQB slices RSQB

   70 if_disjunction.rep: ε
   71                   | if_disjunction.rep IF disjunction

   72 expression.opt: ε
   73               | expression

   74 colon_expression.opt: ε
   75                     | COLON expression.opt

   76 equal_annotated_rhs.opt: ε
   77                        | EQUAL annotated_rhs

   78 annotated_rhs: yield_expr
   79              | star_expressions

   80 yield_expr: YIELD FROM expression
   81           | YIELD star_expressions.opt

   82 return_stmt: RETURN star_expressions.opt

   83 star_expressions.opt: ε
   84                     | star_expressions

   85 star_expressions: star_expression comma_star_expr.rep comma.opt
   86                 | star_expression COMMA
   87                 | star_expression

   88 comma_star_expr.rep: COMMA star_expression
   89                    | comma_star_expr.rep COMMA star_expression

   90 star_expression: STAR bitwise_or
   91                | expression

   92 expression: disjunction IF disjunction ELSE expression
   93           | disjunction
   94           | lambdef

   95 lambdef: LAMBDA lambda_params.opt COLON expression

   96 lambda_params.opt: ε
   97                  | lambda_params comma.opt

   98 lambda_params: NAME
   99              | lambda_params COMMA NAME

  100 disjunction: conjunction or_conjunction.rep
  101            | conjunction

  102 or_conjunction.rep: OR conjunction
  103                   | or_conjunction.rep OR conjunction

  104 conjunction: inversion and_inversion.rep
  105            | inversion

  106 and_inversion.rep: AND inversion
  107                  | and_inversion.rep AND inversion

  108 inversion: NOT inversion
  109          | comparison

  110 comparison: bitwise_or

  111 atom: NAME
  112     | PYTRUE
  113     | PYFALSE
  114     | NONE
  115     | strings
  116     | INTLIT
  117     | FLOATLIT
  118     | list

  119 strings: STRINGLIT
  120        | strings STRINGLIT

  121 list: LSQB star_named_expressions.opt RSQB

  122 star_named_expressions.opt: ε
  123                           | star_named_expressions

  124 comma.opt: ε
  125          | COMMA

  126 star_named_expressions: star_named_expression comma_sne.rep comma.opt

  127 comma_sne.rep: ε
  128              | comma_sne.rep COMMA star_named_expression

  129 star_named_expression: STAR bitwise_or
  130                      | named_expression

  131 named_expression: assignment_expression
  132                 | expression

  133 bitwise_or: bitwise_or VBAR bitwise_xor
  134           | bitwise_xor

  135 bitwise_xor: bitwise_xor CIRCUMFLEX bitwise_and
  136            | bitwise_and

  137 bitwise_and: bitwise_and AMPER shift_expr
  138            | shift_expr

  139 shift_expr: shift_expr LEFTSHIFT sum
  140           | shift_expr RIGHTSHIFT sum
  141           | sum

  142 sum: sum PLUS term
  143    | sum MINUS term
  144    | term

  145 term: term STAR factor
  146     | term SLASH factor
  147     | term DOUBLESLASH factor
  148     | term PERCENT factor
  149     | term AT factor
  150     | factor

  151 factor: PLUS factor
  152       | MINUS factor
  153       | TILDE factor
  154       | power

  155 power: await_primary DOUBLESTAR factor
  156      | await_primary

  157 await_primary: AWAIT primary
  158              | primary

  159 primary: primary DOT NAME
  160        | atom


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FLOATLIT <treeptr> (258) 117
    ENDMARKER <treeptr> (259) 5 12
    NAME <treeptr> (260) 20 25 27 29 43 45 50 68 98 99 111 159
    INTLIT <treeptr> (261) 116
    STRINGLIT <treeptr> (262) 119 120
    NEWLINE <treeptr> (263) 10 11
    INDENT <treeptr> (264)
    DEDENT <treeptr> (265)
    LPAR <treeptr> (266) 22 26 32 47
    RPAR <treeptr> (267) 22 26 32 47
    LSQB <treeptr> (268) 28 30 69 121
    RSQB <treeptr> (269) 28 30 69 121
    COLON <treeptr> (270) 20 21 57 75 95
    COMMA <treeptr> (271) 38 40 42 54 66 86 88 89 99 125 128
    SEMI <treeptr> (272) 14 16
    PLUS <treeptr> (273) 142 151
    MINUS <treeptr> (274) 143 152
    STAR <treeptr> (275) 58 90 129 145
    SLASH <treeptr> (276) 146
    VBAR <treeptr> (277) 133
    AMPER <treeptr> (278) 137
    LESS <treeptr> (279)
    GREATER <treeptr> (280)
    EQUAL <treeptr> (281) 43 45 77
    DOT <treeptr> (282) 27 29 68 159
    PERCENT <treeptr> (283) 148
    LBRACE <treeptr> (284)
    RBRACE <treeptr> (285)
    EQEQUAL <treeptr> (286)
    NOTEQUAL <treeptr> (287)
    LESSEQUAL <treeptr> (288)
    GREATEREQUAL <treeptr> (289)
    TILDE <treeptr> (290) 153
    CIRCUMFLEX <treeptr> (291) 135
    LEFTSHIFT <treeptr> (292) 139
    RIGHTSHIFT <treeptr> (293) 140
    DOUBLESTAR <treeptr> (294) 46 155
    PLUSEQUAL <treeptr> (295)
    MINEQUAL <treeptr> (296)
    STAREQUAL <treeptr> (297)
    SLASHEQUAL <treeptr> (298)
    PERCENTEQUAL <treeptr> (299)
    AMPEREQUAL <treeptr> (300)
    VBAREQUAL <treeptr> (301)
    CIRCUMFLEXEQUAL <treeptr> (302)
    LEFTSHIFTEQUAL <treeptr> (303)
    RIGHTSHIFTEQUAL <treeptr> (304)
    DOUBLESTAREQUAL <treeptr> (305)
    DOUBLESLASH <treeptr> (306) 147
    DOUBLESLASHEQUAL <treeptr> (307)
    AT <treeptr> (308) 149
    ATEQUAL <treeptr> (309)
    RARROW <treeptr> (310)
    ELLIPSIS <treeptr> (311)
    COLONEQUAL <treeptr> (312) 50
    PYFALSE <treeptr> (313) 113
    PYDEF <treeptr> (314)
    IF <treeptr> (315) 71 92
    RAISE <treeptr> (316)
    NONE <treeptr> (317) 114
    DEL <treeptr> (318)
    IMPORT <treeptr> (319)
    RETURN <treeptr> (320) 82
    PYTRUE <treeptr> (321) 112
    ELIF <treeptr> (322)
    IN <treeptr> (323) 62
    TRY <treeptr> (324)
    AND <treeptr> (325) 106 107
    ELSE <treeptr> (326) 92
    IS <treeptr> (327)
    WHILE <treeptr> (328)
    AS <treeptr> (329)
    EXCEPT <treeptr> (330)
    LAMBDA <treeptr> (331) 95
    WITH <treeptr> (332)
    ASSERT <treeptr> (333)
    FINALLY <treeptr> (334)
    NONLOCAL <treeptr> (335)
    YIELD <treeptr> (336) 80 81
    BREAK <treeptr> (337)
    FOR <treeptr> (338) 62
    NOT <treeptr> (339) 108
    CLASS <treeptr> (340)
    FROM <treeptr> (341) 80
    OR <treeptr> (342) 102 103
    CONTINUE <treeptr> (343)
    GLOBAL <treeptr> (344)
    PASS <treeptr> (345)
    OP <treeptr> (346)
    AWAIT <treeptr> (347) 157
    ASYNC <treeptr> (348) 62
    TYPE_IGNORE <treeptr> (349)
    TYPE_COMMENT <treeptr> (350)
    ERRORTOKEN <treeptr> (351)
    COMMENT <treeptr> (352)
    ENCODING <treeptr> (353)
    EMPTY <treeptr> (354)


Nonterminals, with rules where they appear

    $accept (100)
        on left: 0
    file_input (101)
        on left: 1
        on right: 0
    statements.opt (102)
        on left: 2 3
        on right: 1
    endmarker.opt (103)
        on left: 4 5
        on right: 1
    statements (104)
        on left: 6 7
        on right: 3 7
    statement (105)
        on left: 8
        on right: 6 7
    simple_stmts (106)
        on left: 9 10
        on right: 8
    nl_OR_endmarker (107)
        on left: 11 12
        on right: 9
    semi.opt (108)
        on left: 13 14
        on right: 9
    semi_simple_stmts.rep (109)
        on left: 15 16
        on right: 9 16
    simple_stmt (110)
        on left: 17 18 19
        on right: 15 16
    assignment (111)
        on left: 20 21
        on right: 17
    single_target_OR_ssat (112)
        on left: 22 23
        on right: 21
    single_target (113)
        on left: 24 25 26
        on right: 22 26
    single_subscript_attribute_target (114)
        on left: 27 28
        on right: 23 24
    t_primary (115)
        on left: 29 30 31 32 33
        on right: 27 28 29 30 31 32 68 69
    arguments.opt (116)
        on left: 34 35
        on right: 32
    arguments (117)
        on left: 36
        on right: 35
    args (118)
        on left: 37
        on right: 36
    kwargs (119)
        on left: 38
        on right: 37
    comma_kwarg_or_starred.rep (120)
        on left: 39 40
        on right: 38 40
    comma_kwarg_or_double_starred.rep (121)
        on left: 41 42
        on right: 38 42
    kwarg_or_starred (122)
        on left: 43 44
        on right: 39 40
    kwarg_or_double_starred (123)
        on left: 45 46
        on right: 41 42
    genexp (124)
        on left: 47
        on right: 31
    ass_expr_OR_expr (125)
        on left: 48 49
        on right: 47
    assignment_expression (126)
        on left: 50
        on right: 48 131
    slices (127)
        on left: 51 52
        on right: 28 30 69
    comma_slice_OR_starred_expr.rep (128)
        on left: 53 54
        on right: 52 54
    slice_OR_starred_expr (129)
        on left: 55 56
        on right: 53 54
    slice (130)
        on left: 57
        on right: 51 55
    starred_expression (131)
        on left: 58
        on right: 44 56
    for_if_clauses (132)
        on left: 59
        on right: 47
    for_if_clause.rep (133)
        on left: 60 61
        on right: 59 61
    for_if_clause (134)
        on left: 62
        on right: 60 61
    star_targets (135)
        on left: 63 64
        on right: 62
    comma_star_target.rep (136)
        on left: 65 66
        on right: 64 66
    star_target (137)
        on left: 67
        on right: 63 64 66
    target_with_star_atom (138)
        on left: 68 69
        on right: 67
    if_disjunction.rep (139)
        on left: 70 71
        on right: 62 71
    expression.opt (140)
        on left: 72 73
        on right: 57 75
    colon_expression.opt (141)
        on left: 74 75
        on right: 57
    equal_annotated_rhs.opt (142)
        on left: 76 77
        on right: 20 21
    annotated_rhs (143)
        on left: 78 79
        on right: 77
    yield_expr (144)
        on left: 80 81
        on right: 78
    return_stmt (145)
        on left: 82
        on right: 18
    star_expressions.opt (146)
        on left: 83 84
        on right: 81 82
    star_expressions (147)
        on left: 85 86 87
        on right: 19 79 84
    comma_star_expr.rep (148)
        on left: 88 89
        on right: 85 89
    star_expression (149)
        on left: 90 91
        on right: 85 86 87 88 89
    expression (150)
        on left: 92 93 94
        on right: 20 21 43 45 46 49 58 73 80 91 92 95 132
    lambdef (151)
        on left: 95
        on right: 94
    lambda_params.opt (152)
        on left: 96 97
        on right: 95
    lambda_params (153)
        on left: 98 99
        on right: 97 99
    disjunction (154)
        on left: 100 101
        on right: 62 71 92 93
    or_conjunction.rep (155)
        on left: 102 103
        on right: 100 103
    conjunction (156)
        on left: 104 105
        on right: 100 101 102 103
    and_inversion.rep (157)
        on left: 106 107
        on right: 104 107
    inversion (158)
        on left: 108 109
        on right: 104 105 106 107 108
    comparison (159)
        on left: 110
        on right: 109
    atom (160)
        on left: 111 112 113 114 115 116 117 118
        on right: 33 160
    strings (161)
        on left: 119 120
        on right: 115 120
    list (162)
        on left: 121
        on right: 118
    star_named_expressions.opt (163)
        on left: 122 123
        on right: 121
    comma.opt (164)
        on left: 124 125
        on right: 36 52 64 85 97 126
    star_named_expressions (165)
        on left: 126
        on right: 123
    comma_sne.rep (166)
        on left: 127 128
        on right: 126 128
    star_named_expression (167)
        on left: 129 130
        on right: 126 128
    named_expression (168)
        on left: 131 132
        on right: 130
    bitwise_or (169)
        on left: 133 134
        on right: 90 110 129 133
    bitwise_xor (170)
        on left: 135 136
        on right: 133 134 135
    bitwise_and (171)
        on left: 137 138
        on right: 135 136 137
    shift_expr (172)
        on left: 139 140 141
        on right: 137 138 139 140
    sum (173)
        on left: 142 143 144
        on right: 139 140 141 142 143
    term (174)
        on left: 145 146 147 148 149 150
        on right: 142 143 144 145 146 147 148 149
    factor (175)
        on left: 151 152 153 154
        on right: 145 146 147 148 149 150 151 152 153 155
    power (176)
        on left: 155 156
        on right: 154
    await_primary (177)
        on left: 157 158
        on right: 155 156
    primary (178)
        on left: 159 160
        on right: 157 158 159


State 0

    0 $accept: • file_input $end

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 2
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    NEWLINE    shift, and go to state 5
    LPAR       shift, and go to state 6
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    STAR       shift, and go to state 10
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    RETURN     shift, and go to state 14
    PYTRUE     shift, and go to state 15
    LAMBDA     shift, and go to state 16
    NOT        shift, and go to state 17
    AWAIT      shift, and go to state 18

    $default  reduce using rule 2 (statements.opt)

    file_input                         go to state 19
    statements.opt                     go to state 20
    statements                         go to state 21
    statement                          go to state 22
    simple_stmts                       go to state 23
    semi_simple_stmts.rep              go to state 24
    simple_stmt                        go to state 25
    assignment                         go to state 26
    single_target_OR_ssat              go to state 27
    single_subscript_attribute_target  go to state 28
    t_primary                          go to state 29
    return_stmt                        go to state 30
    star_expressions                   go to state 31
    star_expression                    go to state 32
    expression                         go to state 33
    lambdef                            go to state 34
    disjunction                        go to state 35
    conjunction                        go to state 36
    inversion                          go to state 37
    comparison                         go to state 38
    atom                               go to state 39
    strings                            go to state 40
    list                               go to state 41
    bitwise_or                         go to state 42
    bitwise_xor                        go to state 43
    bitwise_and                        go to state 44
    shift_expr                         go to state 45
    sum                                go to state 46
    term                               go to state 47
    factor                             go to state 48
    power                              go to state 49
    await_primary                      go to state 50
    primary                            go to state 51


State 1

  117 atom: FLOATLIT •

    $default  reduce using rule 117 (atom)


State 2

   20 assignment: NAME • COLON expression equal_annotated_rhs.opt
  111 atom: NAME •

    COLON  shift, and go to state 52

    $default  reduce using rule 111 (atom)


State 3

  116 atom: INTLIT •

    $default  reduce using rule 116 (atom)


State 4

  119 strings: STRINGLIT •

    $default  reduce using rule 119 (strings)


State 5

   10 simple_stmts: NEWLINE •

    $default  reduce using rule 10 (simple_stmts)


State 6

   22 single_target_OR_ssat: LPAR • single_target RPAR

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 53
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LPAR       shift, and go to state 54
    LSQB       shift, and go to state 7
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15

    single_target                      go to state 55
    single_subscript_attribute_target  go to state 56
    t_primary                          go to state 29
    atom                               go to state 57
    strings                            go to state 40
    list                               go to state 41


State 7

  121 list: LSQB • star_named_expressions.opt RSQB

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 58
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    STAR       shift, and go to state 59
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    LAMBDA     shift, and go to state 16
    NOT        shift, and go to state 17
    AWAIT      shift, and go to state 18

    $default  reduce using rule 122 (star_named_expressions.opt)

    assignment_expression       go to state 60
    expression                  go to state 61
    lambdef                     go to state 34
    disjunction                 go to state 35
    conjunction                 go to state 36
    inversion                   go to state 37
    comparison                  go to state 38
    atom                        go to state 62
    strings                     go to state 40
    list                        go to state 41
    star_named_expressions.opt  go to state 63
    star_named_expressions      go to state 64
    star_named_expression       go to state 65
    named_expression            go to state 66
    bitwise_or                  go to state 42
    bitwise_xor                 go to state 43
    bitwise_and                 go to state 44
    shift_expr                  go to state 45
    sum                         go to state 46
    term                        go to state 47
    factor                      go to state 48
    power                       go to state 49
    await_primary               go to state 50
    primary                     go to state 51


State 8

  151 factor: PLUS • factor

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    AWAIT      shift, and go to state 18

    atom           go to state 62
    strings        go to state 40
    list           go to state 41
    factor         go to state 68
    power          go to state 49
    await_primary  go to state 50
    primary        go to state 51


State 9

  152 factor: MINUS • factor

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    AWAIT      shift, and go to state 18

    atom           go to state 62
    strings        go to state 40
    list           go to state 41
    factor         go to state 69
    power          go to state 49
    await_primary  go to state 50
    primary        go to state 51


State 10

   90 star_expression: STAR • bitwise_or

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    AWAIT      shift, and go to state 18

    atom           go to state 62
    strings        go to state 40
    list           go to state 41
    bitwise_or     go to state 70
    bitwise_xor    go to state 43
    bitwise_and    go to state 44
    shift_expr     go to state 45
    sum            go to state 46
    term           go to state 47
    factor         go to state 48
    power          go to state 49
    await_primary  go to state 50
    primary        go to state 51


State 11

  153 factor: TILDE • factor

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    AWAIT      shift, and go to state 18

    atom           go to state 62
    strings        go to state 40
    list           go to state 41
    factor         go to state 71
    power          go to state 49
    await_primary  go to state 50
    primary        go to state 51


State 12

  113 atom: PYFALSE •

    $default  reduce using rule 113 (atom)


State 13

  114 atom: NONE •

    $default  reduce using rule 114 (atom)


State 14

   82 return_stmt: RETURN • star_expressions.opt

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    STAR       shift, and go to state 10
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    LAMBDA     shift, and go to state 16
    NOT        shift, and go to state 17
    AWAIT      shift, and go to state 18

    $default  reduce using rule 83 (star_expressions.opt)

    star_expressions.opt  go to state 72
    star_expressions      go to state 73
    star_expression       go to state 32
    expression            go to state 33
    lambdef               go to state 34
    disjunction           go to state 35
    conjunction           go to state 36
    inversion             go to state 37
    comparison            go to state 38
    atom                  go to state 62
    strings               go to state 40
    list                  go to state 41
    bitwise_or            go to state 42
    bitwise_xor           go to state 43
    bitwise_and           go to state 44
    shift_expr            go to state 45
    sum                   go to state 46
    term                  go to state 47
    factor                go to state 48
    power                 go to state 49
    await_primary         go to state 50
    primary               go to state 51


State 15

  112 atom: PYTRUE •

    $default  reduce using rule 112 (atom)


State 16

   95 lambdef: LAMBDA • lambda_params.opt COLON expression

    NAME  shift, and go to state 74

    $default  reduce using rule 96 (lambda_params.opt)

    lambda_params.opt  go to state 75
    lambda_params      go to state 76


State 17

  108 inversion: NOT • inversion

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15
    NOT        shift, and go to state 17
    AWAIT      shift, and go to state 18

    inversion      go to state 77
    comparison     go to state 38
    atom           go to state 62
    strings        go to state 40
    list           go to state 41
    bitwise_or     go to state 42
    bitwise_xor    go to state 43
    bitwise_and    go to state 44
    shift_expr     go to state 45
    sum            go to state 46
    term           go to state 47
    factor         go to state 48
    power          go to state 49
    await_primary  go to state 50
    primary        go to state 51


State 18

  157 await_primary: AWAIT • primary

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 67
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    LSQB       shift, and go to state 7
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    PYTRUE     shift, and go to state 15

    atom     go to state 62
    strings  go to state 40
    list     go to state 41
    primary  go to state 78


State 19

    0 $accept: file_input • $end

    $end  shift, and go to state 79


State 20

    1 file_input: statements.opt • endmarker.opt

    ENDMARKER  shift, and go to state 80

    $default  reduce using rule 4 (endmarker.opt)

    endmarker.opt  go to state 81


State 21

    3 statements.opt: statements •
    7 statements: statements • statement

    FLOATLIT   shift, and go to state 1
    NAME       shift, and go to state 2
    INTLIT     shift, and go to state 3
    STRINGLIT  shift, and go to state 4
    NEWLINE    shift, and go to state 5
    LPAR       shift, and go to state 6
    LSQB       shift, and go to state 7
    PLUS       shift, and go to state 8
    MINUS      shift, and go to state 9
    STAR       shift, and go to state 10
    TILDE      shift, and go to state 11
    PYFALSE    shift, and go to state 12
    NONE       shift, and go to state 13
    RETURN     shift, and go to state 14
    PYTRUE     shift, and go to state 15
    LAMBDA     shift, and go to state 16
    NOT        shift, and go to state 17
    AWAIT      shift, and go to state 18

    $default  reduce using rule 3 (statements.opt)

    statement                          go to state 82
    simple_stmts                       go to state 23
    semi_simple_stmts.rep              go to state 24
    simple_stmt                        go to state 25
    assignment                         go to state 26
    single_target_OR_ssat              go to state 27
    single_subscript_attribute_target  go to state 28
    t_primary                          go to state 29
    return_stmt                        go to state 30
    star_expressions                   go to state 31
    star_expression                    go to state 32
    expression                         go to state 33
    lambdef                            go to state 34
    disjunction                        go to state 35
    conjunction                        go to state 36
    inversion                          go to state 37
    comparison                         go to state 38
    atom                               go to state 39
    strings                            go to state 40
    list                               go to state 41
    bitwise_or                         go to state 42
    bitwise_xor                        go to state 43
    bitwise_and                        go to state 44
    shift_expr                         go to state 45
    sum                                go to state 46
    term                               go to state 47
    factor                             go to state 48
    power                              go to state 49
    await_primary                      go to state 50
    primary                            go to state 51


State 22

    6 statements: statement •

    $default  reduce using rule 6 (statements)


State 23

    8 statement: simple_stmts •

    $default  reduce using rule 8 (statement)


State 24

    9 simple_stmts: semi_simple_stmts.rep • semi.opt nl_OR_endmarker
   16 semi_simple_stmts.rep: semi_simple_stmts.rep • SEMI simple_stmt

    SEMI  shift, and go to state 83

    $default  reduce using rule 13 (semi.opt)

    semi.opt  go to state 84


State 25

   15 semi_simple_stmts.rep: simple_stmt •

    $default  reduce using rule 15 (semi_simple_stmts.rep)


State 26

   17 simple_stmt: assignment •

    $default  reduce using rule 17 (simple_stmt)


State 27

   21 assignment: single_target_OR_ssat • COLON expression equal_annotated_rhs.opt

    COLON  shift, and go to state 85


State 28

   23 single_target_OR_ssat: single_subscript_attribute_target •

    $default  reduce using rule 23 (single_target_OR_ssat)


State 29

   27 single_subscript_attribute_target: t_primary • DOT NAME
   28                                  | t_primary • LSQB slices RSQB
   29 t_primary: t_primary • DOT NAME
   30          | t_primary • LSQB slices RSQB
   31          | t_primary • genexp
   32          | t_primary • LPAR arguments.opt RPAR

    LPAR  shift, and go to state 86
    LSQB  shift, and go to state 87
    DOT   shift, and go to state 88

    genexp  go to state 89


State 30

   18 simple_stmt: return_stmt •

    $default  reduce using rule 18 (simple_stmt)


State 31

   19 simple_stmt: star_expressions •

    $default  reduce using rule 19 (simple_stmt)


State 32

   85 star_expressions: star_expression • comma_star_expr.rep comma.opt
   86                 | star_expression • COMMA
   87                 | star_expression •

    COMMA  shift, and go to state 90

    $default  reduce using rule 87 (star_expressions)

    comma_star_expr.rep  go to state 91


State 33

   91 star_expression: expression •

    $default  reduce using rule 91 (star_expression)


State 34

   94 expression: lambdef •

    $default  reduce using rule 94 (expression)


State 35

   92 expression: disjunction • IF disjunction ELSE expression
   93           | disjunction •

    IF  shift, and go to state 92

    $default  reduce using rule 93 (expression)


State 36

  100 disjunction: conjunction • or_conjunction.rep
  101            | conjunction •

    OR  shift, and go to state 93

    $default  reduce using rule 101 (disjunction)

    or_conjunction.rep  go to state 94


State 37

  104 conjunction: inversion • and_inversion.rep
  105            | inversion •

    AND  shift, and go to state 95

    $default  reduce using rule 105 (conjunction)

    and_inversion.rep  go to state 96


State 38

  109 inversion: comparison •

    $default  reduce using rule 109 (inversion)


State 39

   33 t_primary: atom •
  160 primary: atom •

    LPAR      reduce using rule 33 (t_primary)
    LSQB      reduce using rule 33 (t_primary)
    DOT       reduce using rule 33 (t_primary)
    DOT       [reduce using rule 160 (primary)]
    $default  reduce using rule 160 (primary)


State 40

  115 atom: strings •
  120 strings: strings • STRINGLIT

    STRINGLIT  shift, and go to state 97

    $default  reduce using rule 115 (atom)


State 41

  118 atom: list •

    $default  reduce using rule 118 (atom)


State 42

  110 comparison: bitwise_or •
  133 bitwise_or: bitwise_or • VBAR bitwise_xor

    VBAR  shift, and go to state 98

    $default  reduce using rule 110 (comparison)


State 43

  134 bitwise_or: bitwise_xor •
  135 bitwise_xor: bitwise_xor • CIRCUMFLEX bitwise_and

    CIRCUMFLEX  shift, and go to state 99

    $default  reduce using rule 134 (bitwise_or)


State 44

  136 bitwise_xor: bitwise_and •
  137 bitwise_and: bitwise_and • AMPER shift_expr

    AMPER  shift, and go to state 100

    $default  reduce using rule 136 (bitwise_xor)


State 45

  138 bitwise_and: shift_expr •
  139 shift_expr: shift_expr • LEFTSHIFT sum
  140           | shift_expr • RIGHTSHIFT sum

    LEFTSHIFT   shift, and go to state 101
    RIGHTSHIFT  shift, and go to state 102

    $default  reduce using rule 138 (bitwise_and)


State 46

  141 shift_expr: sum •
  142 sum: sum • PLUS term
  143    | sum • MINUS term

    PLUS   shift, and go to state 103
    MINUS  shift, and go to state 104

    $default  reduce using rule 141 (shift_expr)


State 47

  144 sum: term •
  145 term: term • STAR factor
  146     | term • SLASH factor
  147     | term • DOUBLESLASH factor
  148     | term • PERCENT factor
  149     | term • AT factor

    STAR         shift, and go to state 105
    SLASH        shift, and go to state 106
    PERCENT      shift, and go to state 107
    DOUBLESLASH  shift, and go to state 108
    AT           shift, and go to state 109

    $default  reduce using rule 144 (sum)


State 48

  150 term: factor •

    $default  reduce using rule 150 (term)


State 49

  154 factor: power •
